--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.14.1",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "node-sass": "^5.0.0",
@@ -13,6 +15,7 @@
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
+    "react-hooks-helper": "^1.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
